Updated Dashboard API endpoint
It was pointing to DEV.

--- a/app/Dashboard.html
+++ b/app/Dashboard.html
@@ -112,7 +112,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 
 <script type="text/javascript">
-  const endpoint = 'https://frank-api-dev.herokuapp.com';
+  const endpoint = 'https://frank.treasury.love';
   const form = document.getElementById("new-article");
   form.onsubmit = (e) =>
   {
