Squashed commit of the following:
commit e2c0aed6326a478d84a83f859628e41bbaf8c8de
Author: Jared L Jennings <jared@jaredjennings.org>
Date:   Sun Jun 12 21:03:36 2016 -0500

    Removed frank namespace references

--- a/app/Dashboard.html
+++ b/app/Dashboard.html
@@ -131,9 +131,9 @@
                 {
                 "type": "posts",
                 "relationships": {
-                    "frank-profile":
+                    "profile":
                         { "data":
-                            { "type": "frank_profiles", "id": "1" }
+                            { "type": "profiles", "id": "1" }
                         }
                 },
                 "attributes": {
