--- a/app/journal.html
+++ b/app/journal.html
@@ -108,7 +108,7 @@
         <div class="wizard-container">
 
           <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-            <form id="entry" action="/frank-entries" method="post" accept-charset="utf-8">
+            <form id="entry" action="/entries" method="post" accept-charset="utf-8">
               <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
 
               <div class="wizard-header">
@@ -183,7 +183,7 @@
               <div class="modal fade">
                   <div class="modal-dialog">
                       <div class="modal-content">
-                          <form id="form_add_partner" data-async method="GET" action="/frank-profiles">
+                          <form id="form_add_partner" data-async method="GET" action="/profiles">
                               <div class="modal-header">
                                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                   <h4 class="modal-title">Add partner</h4>
