--- a/app/insights.html
+++ b/app/insights.html
@@ -34,7 +34,7 @@
       m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-73481201-1', 'auto');
+    ga('create', 'UA-73481201-1', 'treasury.love');
     ga('send', 'pageview');
 
   </script>
