--- a/app/journal.html
+++ b/app/journal.html
@@ -80,7 +80,7 @@
           <a class="page-scroll" href="index.html#services">Services</a>
         </li>
         <li>
-          <a class="page-scroll" href="index.html#privacy">Privacy</a>
+          <a class="page-scroll" href="tips.html">Tips</a>
         </li>
         <li>
           <a class="page-scroll" href="index.html#contact">Contact</a>
