Updated to not include the title

--- a/app/tips.html
+++ b/app/tips.html
@@ -120,8 +120,8 @@
     document.getElementById("insights").innerHTML+=("<div class=\"card-box col-md-4 col-sm-6\">" +
       "<div class=\"card\" data-background=\"color\" data-color=\"black\">" +
         "<div class=\"content\">" +
-          "<h6 class=\"category\">Insight</h6>" +
-          "<h4 class=\"title\"><a href=\"#\">" + json.data[x].attributes.title + "</a></h4>" +
+          // "<h6 class=\"category\">Tip</h6>" +
+          // "<h4 class=\"title\"><a href=\"#\">" + json.data[x].attributes.title + "</a></h4>" +
           "<p class=\"description\">" + json.data[x].attributes.body + "</p>" +
         "</div>" +
       "</div>" +
