--- a/app/tips-create.html
+++ b/app/tips-create.html
@@ -123,7 +123,7 @@
 </div>
 
 <script type="text/javascript">
-  const endpoint = 'http://localhost:3000';
+  const endpoint = 'https://frank.treasury.love';
   document.getElementById("status").innerHTML = "";
 
   document.querySelector("#createTip").addEventListener("submit", function(e){
