--- a/app/tips.html
+++ b/app/tips.html
@@ -105,7 +105,7 @@
 </div>
 
 <script type="text/javascript">
-  const endpoint = 'http://localhost:3000';
+  const endpoint = 'https://frank.treasury.love';
   const form = document.getElementById("new-article");
   fetch(`${endpoint}/insights`, {
     method: 'get',
