Build CSS into bower

--- a/app/tips.html
+++ b/app/tips.html
@@ -12,10 +12,14 @@
   <link rel="icon" type="image/png" href="images/favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 
+  <!-- build:css styles/tips.css -->
+  <!-- bower:css -->
   <link href="assets/css/hipster_cards.css" rel="stylesheet"/>
+  <link href="assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
+  <!-- endbower -->
+  <!-- endbuild -->
 
   <!--     Fonts and icons     -->
-  <link href="assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href='https://fonts.googleapis.com/css?family=Playfair+Display|Raleway:700,100,400|Roboto:400,700|Playfair+Display+SC:400,700' rel='stylesheet' type='text/css'>
 
